--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,7 +3,7 @@ import logo from "../assets/logo.gif";
 ---
 
 <div
-  class="header container mx-auto flex items-center justify-between relative
+  class="header container mx-auto w-11/12 md:w-full flex items-center justify-center md:justify-between relative
     before:absolute before:content-[''] before:-z-10 before:w-full before:block before:bg-black before:bottom-0 before:h-0.5
     md:before:bottom-1 md:before:h-1"
 >
