--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,5 @@
 ---
-import logo from "../assets/logo.gif";
+import logo from "@assets/images/logo.gif";
 ---
 
 <div
@@ -14,18 +14,18 @@ import logo from "../assets/logo.gif";
     <nav>
       <ul class="flex mt-10 mr-3">
         <li>
-          <a class="ml-5 uppercase" href="/">Noticias</a>
+          <a class="ml-5 uppercase font-sans" href="/">Noticias</a>
         </li>
         <li>
-          <a class="ml-5 uppercase" href="/">Discos</a>
+          <a class="ml-5 uppercase font-sans" href="/discos">Discos</a>
         </li>
         <li>
-          <a class="ml-5 uppercase" href="/">Conciertos</a>
+          <a class="ml-5 uppercase font-sans" href="/">Conciertos</a>
         </li>
         <li>
-          <a class="ml-5 uppercase" href="/">Entrevistas</a>
+          <a class="ml-5 uppercase font-sans" href="/">Entrevistas</a>
         </li>
-        <li><a class="ml-5 uppercase" href="/">Tv</a></li>
+        <li><a class="ml-5 uppercase font-sans" href="/">Tv</a></li>
       </ul>
     </nav>
   </div>
