--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -1,5 +1,5 @@
 ---
-import astroLogo from "../assets/logo.gif";
+import astroLogo from "@assets/images/logo.gif";
 
 const isDev = import.meta.env.DEV;
 const isProd = import.meta.env.PROD;
