--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -1,5 +1,5 @@
 ---
-import favicon from "../assets/favicon.ico";
+import favicon from "@assets/images/favicon.ico";
 const { title, description } = Astro.props;
 ---
 
