--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -14,18 +14,29 @@ import logo from "@assets/images/logo.gif";
     <nav>
       <ul class="flex mt-10 mr-3">
         <li>
-          <a class="ml-5 uppercase font-sans" href="/">Noticias</a>
+          <a class="ml-5 uppercase font-sans" href="/" data-astro-prefetch
+            >Noticias</a
+          >
         </li>
         <li>
-          <a class="ml-5 uppercase font-sans" href="/discos">Discos</a>
+          <a class="ml-5 uppercase font-sans" href="/discos" data-astro-prefetch
+            >Discos</a
+          >
         </li>
         <li>
-          <a class="ml-5 uppercase font-sans" href="/">Conciertos</a>
+          <a class="ml-5 uppercase font-sans" href="/" data-astro-prefetch
+            >Conciertos</a
+          >
         </li>
         <li>
-          <a class="ml-5 uppercase font-sans" href="/">Entrevistas</a>
+          <a class="ml-5 uppercase font-sans" href="/" data-astro-prefetch
+            >Entrevistas</a
+          >
         </li>
-        <li><a class="ml-5 uppercase font-sans" href="/">Tv</a></li>
+        <li>
+          <a class="ml-5 uppercase font-sans" href="/" data-astro-prefetch>Tv</a
+          >
+        </li>
       </ul>
     </nav>
   </div>
