--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -9,7 +9,7 @@ import interviewsIcon from "@assets/images/tabs/mic.png";
 <div class="container mx-auto text-center border-t-4 border-black">
   <ul class="flex mx-auto pt-3 pb-8 justify-around md:justify-center">
     <li>
-      <a href="/">
+      <a href="/" data-astro-prefetch>
         <span class="hidden md:block m-3">Conciertos</span>
         <img
           class="size-6 block mx-4 md:hidden"
@@ -19,7 +19,7 @@ import interviewsIcon from "@assets/images/tabs/mic.png";
       </a>
     </li>
     <li>
-      <a href="/discos">
+      <a href="/discos" data-astro-prefetch>
         <span class="hidden md:block m-3">Discos</span>
         <img
           class="size-6 block mx-4 md:hidden"
@@ -29,7 +29,7 @@ import interviewsIcon from "@assets/images/tabs/mic.png";
       </a>
     </li>
     <li>
-      <a href="/">
+      <a href="/" data-astro-prefetch>
         <span class="hidden md:block m-3">Noticias</span>
         <img
           class="size-6 block mx-4 md:hidden"
@@ -39,7 +39,7 @@ import interviewsIcon from "@assets/images/tabs/mic.png";
       </a>
     </li>
     <li>
-      <a href="/">
+      <a href="/" data-astro-prefetch>
         <span class="hidden md:block m-3">Entrevistas</span>
         <img
           class="size-6 block mx-4 md:hidden"
@@ -49,7 +49,7 @@ import interviewsIcon from "@assets/images/tabs/mic.png";
       </a>
     </li>
     <li>
-      <a href="/">
+      <a href="/" data-astro-prefetch>
         <span class="hidden md:block m-3">BiginnerTV</span>
         <img
           class="size-6 block mx-4 md:hidden"
