Album detail pages

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,7 +6,7 @@ import tvIcon from "@assets/images/tabs/video.png";
 import interviewsIcon from "@assets/images/tabs/mic.png";
 ---
 
-<div class="container mx-auto text-center border-t-4 border-black">
+<div class="container text-center border-t-4 border-black">
   <ul class="flex mx-auto pt-3 pb-8 justify-around md:justify-center">
     <li>
       <a href="/" data-astro-prefetch>
